--- a/index.html
+++ b/index.html
@@ -115,27 +115,27 @@
             <h1 class="sub_title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png">
+                    <img src="images/project-1.png">
                     <div class="layer">
                         <h3>Website Development</h3>
                         <p>This app connects you to the talented people around the world</p>
-                        <a href="#"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+                        <a href="https://tsrahyderabad.com/TSRA/index.php" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png">
+                    <img src="images/project-2.png">
                     <div class="layer">
                         <h3>Website Design</h3>
                         <p>This app connects you to the talented people around the world</p>
-                        <a href="#"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+                        <a href="https://tsushyderabad.com/TSUS/index.php" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png">
+                    <img src="images/project-3.png">
                     <div class="layer">
-                        <h3>CRM / ERP</h3>
+                        <h3>Backend Development</h3>
                         <p>This app connects you to the talented people around the world</p>
-                        <a href="#"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+                        <a href="https://www.cmr.edu.in/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -153,9 +153,11 @@
                     <p><a href="mailto:sagarskbehera1996@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> sagarskbehera1996@gmail.com</a></p>
                     <p><a href="tel:+916370501322"><i class="fa fa-phone-square" aria-hidden="true"></i> +916370501322</a></p>
                     <div class="social-icons">
-                        <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/prince.aryan.311493?mibextid=ZbWKwL"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/sagar_._6/?igsh=MTJlb292dGl3NWl3Yw%3D%3D"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/sagar-kumar-behera-b19a88146/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://github.com/sagarmintu"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://www.youtube.com/@sagarbehera6316"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                     </div>
                     <a href="images/my-cv.docx" download class="btn btn2">Download CV</a>
                     <a href="https://github.com/sagarmintu" class="btn btn2" target="_blank">Visit Github</a>
