changes are done

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="work">
                     <img src="images/project-1.png">
                     <div class="layer">
-                        <h3>Website Development</h3>
+                        <h3>Website Design & Development</h3>
                         <p>This app connects you to the talented people around the world</p>
                         <a href="https://tsrahyderabad.com/TSRA/index.php" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </div>
@@ -125,15 +125,15 @@
                 <div class="work">
                     <img src="images/project-2.png">
                     <div class="layer">
-                        <h3>Website Design</h3>
+                        <h3>Backend Development</h3>
                         <p>This app connects you to the talented people around the world</p>
-                        <a href="https://tsushyderabad.com/TSUS/index.php" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+                        <a href="https://www.chrysaliskids.com/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/project-3.png">
                     <div class="layer">
-                        <h3>Backend Development</h3>
+                        <h3>Wordpress Design & Development</h3>
                         <p>This app connects you to the talented people around the world</p>
                         <a href="https://www.cmr.edu.in/" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </div>
